<resources>
    <string name="app_name">MAPP_P11_SharedPref</string>

    <!-- Button label for blue button -->
    <string name="purple_button">Purple</string>

    <!-- Button label for green button -->
    <string name="pink_button">Pink</string>

    <!-- Button label for red button -->
    <string name="mint_button">Mint</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count textview -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
</resources>
