<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/count_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="60"
        android:background="@color/default_background"
        android:gravity="center"
        android:text="@string/default_count"
        android:textColor="@android:color/white"
        android:textSize="112sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/orange_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/default_background"
            android:onClick="changeBackground"
            android:text="@string/black_button" />

        <Button
            android:id="@+id/mint_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/mint_background"
            android:onClick="changeBackground"
            android:text="@string/mint_button" />

        <Button
            android:id="@+id/purple_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/purple_background"
            android:onClick="changeBackground"
            android:text="@string/purple_button" />

        <Button
            android:id="@+id/pink_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/pink_background"
            android:onClick="changeBackground"
            android:text="@string/pink_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/count_button"
            style="@style/AppTheme.Button"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:onClick="countUp"
            android:text="@string/count_button" />

        <Button
            android:id="@+id/reset_button"
            style="@style/AppTheme.Button"
            android:onClick="reset"
            android:text="@string/reset_button" />

    </LinearLayout>

</LinearLayout>